--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -25,27 +25,24 @@ RUN mkdir -p $APP_HOME
 
 WORKDIR $APP_HOME
 
-# Changed these COPY commands
-COPY src/requirements.txt ./requirements.txt    # <-- New: Copy requirements first
+# Copy files and install dependencies
+COPY src/requirements.txt ./requirements.txt
 
-# Changed this RUN command to separate pip installations
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Changed these COPY commands
-COPY src/ ./                                    # <-- New: Copy src directory
-COPY nginx/ ./nginx/                            # <-- New: Copy nginx directory
-COPY scripts_deploy/ ./scripts_deploy/          # <-- New: Copy scripts_deploy directory
+# Copy application files
+COPY src/ ./
+COPY nginx/ ./nginx/
+COPY scripts_deploy/ ./scripts_deploy/
 
-# Split the RUN command for better readability
 RUN mkdir -p ${APP_HOME}/staticfiles ${APP_HOME}/mediafiles && \
     sed -i "s/\r$//g" entrypoint.sh start-django.sh start-celeryworker.sh start-celerybeat.sh start-celeryflower.sh && \
     mkdir -p ${LOGFILE_ROOT} && \
     chown -R ${UID}:${GID} $HOME_PATH && \
     chmod -R 775 $HOME_PATH
 
-# Added this line to ensure scripts are executable
-RUN chmod +x *.sh                              # <-- New: Make scripts executable
+RUN chmod +x *.sh
 
 USER ${UID}:${GID}
 
